--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2448,3 +2448,13 @@ div.pbo {
 .kfk-trackentry {
 	background-color: rgba(0, 0, 0, 0.03);
 }
+.avatar32 {
+	width: 32px;
+	height: 32px;
+	border-radius: 16px;
+}
+.avatar40 {
+	width: 40px;
+	height: 40px;
+	border-radius: 20px;
+}
