--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2517,39 +2517,45 @@ div#todo_comments img {
 .mtc-cursor-default {
 	cursor: default;
 }
-.mtc-cursor-pointer {
-	cursor: pointer;
-}
 .mtc-cursor-move {
 	cursor: url(/cur/move.cur) 20 20, move;
 }
+.mtc-cursor-pan {
+	cursor: url(/cur/pan.cur) 16 16, move;
+}
+.mtc-cursor-kuang {
+	cursor: url(/cur/kuang.cur) 16 16, move;
+}
 .mtc-cursor-ACTION {
-	cursor: url(/cur/ACTION.cur) 20 20, move;
+	cursor: url(/cur/ACTION.cur) 20 20, pointer;
 }
 .mtc-cursor-INFORM {
-	cursor: url(/cur/INFORM.cur) 20 20, move;
+	cursor: url(/cur/INFORM.cur) 20 20, pointer;
 }
 .mtc-cursor-SCRIPT {
-	cursor: url(/cur/SCRIPT.cur) 20 20, move;
+	cursor: url(/cur/SCRIPT.cur) 20 20, pointer;
 }
 .mtc-cursor-TIMER {
-	cursor: url(/cur/TIMER.cur) 20 20, move;
+	cursor: url(/cur/TIMER.cur) 20 20, pointer;
 }
 .mtc-cursor-SUB {
-	cursor: url(/cur/SUB.cur) 20 20, move;
+	cursor: url(/cur/SUB.cur) 20 20, pointer;
 }
 .mtc-cursor-AND {
-	cursor: url(/cur/AND.cur) 20 20, move;
+	cursor: url(/cur/AND.cur) 20 20, pointer;
 }
 .mtc-cursor-OR {
-	cursor: url(/cur/OR.cur) 20 20, move;
+	cursor: url(/cur/OR.cur) 20 20, pointer;
 }
 .mtc-cursor-GROUND {
-	cursor: url(/cur/GROUND.cur) 20 20, move;
+	cursor: url(/cur/GROUND.cur) 20 20, pointer;
 }
 .mtc-cursor-CONNECT {
-	cursor: url(/cur/CONNECT.cur) 20 20, move;
+	cursor: url(/cur/CONNECT.cur) 20 20, pointer;
 }
 .mtc-cursor-THROUGH {
-	cursor: url(/cur/THROUGH.cur) 20 20, move;
+	cursor: url(/cur/THROUGH.cur) 20 20, pointer;
+}
+.mtc-cursor-POINTER {
+	cursor: url(/cur/POINTER.cur) 2 2, pointer;
 }
