--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2564,3 +2564,12 @@ div#todo_comments img {
 .mtc-cursor-POINTER {
 	cursor: url(/cur/POINTER.cur) 0 0, pointer;
 }
+.textsig-0 {
+	width: fit-content;
+	max-width: 150px;
+	height: 32px;
+	border: 1px solid #0000004c;
+	font-weight: 'bolder';
+	font-size: 18px;
+	padding: 1px;
+}
